# fairwindplusplus

./: .gitignore  App.cpp  App.hpp  CMakeLists.txt  DisplayGauge.ui  FairWindAppBase.cpp  README.md  fairwind.json  fairwind.json.sample  main.cpp  resources.qrc
apps/: CMakeLists.txt  FairWindApp.cpp  IApp.cpp  IFairWindApp.cpp
apps/chandlery/: CMakeLists.txt  Chandlery.cpp  Chandlery.hpp  Chandlery.ui  Chandlery_Settings.ui  MainPage.cpp  MainPage.hpp  MainPage.ui  manifest.json  resourcesChandlery.qrc
apps/chart/: CMakeLists.txt  Chart.cpp  Chart.hpp  Chart.ui  Chart_Settings.ui  MainPage.cpp  MainPage.hpp  MainPage.ui  manifest.json  resources.qrc  resourcesChart.qrc
apps/dashboard/: CMakeLists.txt  Dashboard.cpp  Dashboard.hpp  Dashboard.ui  Dashboard_Settings.ui  MainPage.cpp  MainPage.hpp  MainPage.ui  manifest.json  resources.qrc  resourcesDashboard.qrc
apps/entertainment/: CMakeLists.txt  Entertainment.cpp  Entertainment.hpp  Entertainment.ui  Entertainment_Settings.ui  HistogramWidget.cpp  HistogramWidget.hpp  MainPage.cpp  MainPage.hpp  MainPage.ui  PlayerControls.cpp  PlayerControls.hpp  PlayerControls.ui  PlaylistModel.cpp  PlaylistModel.hpp  VideoWidget.cpp  VideoWidget.hpp  manifest.json  resources.qrc
apps/gc1530/: CMakeLists.txt  GC1530.cpp  GC1530.hpp  GC1530.ui  GC1530_Settings.ui  MainPage.cpp  MainPage.hpp  MainPage.ui  WebView.cpp  WebView.hpp  manifest.json  resourcesGC1530.qrc
apps/imsf/: CMakeLists.txt  Flag.cpp  Flag.hpp  Flag.ui  IMSF.cpp  IMSF.hpp  IMSF.ui  IMSF_Settings.ui  MainPage.cpp  MainPage.hpp  MainPage.ui  manifest.json  resources.qrc  resourcesIMSF.qrc
apps/launcherax10m/: CMakeLists.txt  LauncherAx10m.cpp  LauncherAx10m.hpp  MainPage.cpp  MainPage.hpp  MainPage.ui  manifest.json  resourcesLauncherAx10m.qrc
apps/native/: CMakeLists.txt  Native.cpp  Native.hpp  manifest.json  resources.qrc
apps/portolano/: CMakeLists.txt  MainPage.cpp  MainPage.hpp  MainPage.ui  Portolano.cpp  Portolano.hpp  Portolano.ui  Portolano_Settings.ui  ResultItem.cpp  ResultItem.hpp  ResultItem.ui  manifest.json  resourcesPortolano.qrc
apps/radar/: CMakeLists.txt  MainPage.cpp  MainPage.hpp  MainPage.ui  Radar.cpp  Radar.hpp  Radar.ui  Radar_Settings.ui  manifest.json  resourcesRadar.qrc
apps/settings/: CMakeLists.txt  MainPage.cpp  MainPage.hpp  MainPage.ui  Settings.cpp  Settings.hpp  manifest.json  resourcesSettings.qrc
apps/settings/applications/: Applications.cpp  Applications.hpp  Applications.ui
apps/settings/browser/: Browser.cpp  Browser.hpp  Browser.ui  Displays.cpp  Displays.hpp  Displays.ui  UIArray.cpp  UIArray.hpp  UIArray.ui  UIItem.cpp  UIItem.hpp  UIItem.ui  UIObject.cpp  UIObject.hpp  UIObject.ui  UIValue.cpp  UIValue.hpp  UIValue.ui
apps/settings/connections/: Connections.cpp  Connections.hpp  Connections.ui
apps/settings/extensions/: ExtensionItem.cpp  ExtensionItem.hpp  ExtensionItem.ui  Extensions.cpp  Extensions.hpp  Extensions.ui
apps/settings/general/: General.cpp  General.hpp  General.ui
apps/sonar/: CMakeLists.txt  MainPage.cpp  MainPage.hpp  MainPage.ui  Sonar.cpp  Sonar.hpp  Sonar.ui  Sonar_Settings.ui  manifest.json  resourcesSonar.qrc
apps/uav/: CMakeLists.txt  MainPage.cpp  MainPage.hpp  MainPage.ui  UAV.cpp  UAV.hpp  UAV.ui  UAV_Settings.ui  manifest.json  resourcesUAV.qrc
apps/video/: CMakeLists.txt  MainPage.cpp  MainPage.hpp  MainPage.ui  Video.cpp  Video.hpp  Video.ui  Video_Settings.ui  manifest.json  resources.qrc
apps/weather/: CMakeLists.txt  MainPage.cpp  MainPage.hpp  MainPage.ui  Weather.cpp  Weather.hpp  Weather.ui  Weather_Settings.ui  manifest.json  resources.qrc
apps/web/: CMakeLists.txt  MainPage.cpp  MainPage.hpp  MainPage.ui  Web.cpp  Web.hpp  WebPage.cpp  WebPage.hpp  WebPopupWindow.cpp  WebPopupWindow.hpp  WebView.cpp  WebView.hpp  certificateerrordialog.ui  manifest.json  resources.qrc  resourcesWeb.qrc
sdk/: CMakeLists.txt  README.md  resources.qrc  resourcesSDK.qrc
sdk/Documentation/: Chart - JSON Schema.json  Chart - New JSON model.json  DOCUMENTATION.md  FairWind - JSON Schema.json
sdk/etc/: profile
sdk/examples/: launcherax10m.json  portolano.json  settings.json
sdk/include/FairWindSdk/: App.hpp  AppBase.hpp  AppItem.hpp  DisplayChart.hpp  DisplayDoubleText.hpp  DisplayGauge.hpp  DisplaySingleText.hpp  FairWind.hpp  FairWindApp.hpp  FairWindAppBase.hpp  FairWindOSMLayer.hpp  FairWindSDK.hpp  FairWindTiledLayer.hpp  IApp.hpp  IConnection.hpp  IDisplay.hpp  IFairWindApp.hpp  IFairWindConnection.hpp  IFairWindDisplay.hpp  IFairWindLauncher.hpp  IFairWindLayer.hpp  ILayer.hpp  ILayout.hpp  ISettings.hpp  ISettingsTab.hpp  PageBase.hpp  PanelBase.hpp  QGVItemAton.hpp  QGVItemDefault.hpp  QGVItemShoreBasestations.hpp  QGVItemSignalK.hpp  QGVItemVessel.hpp  SignalKDocument.hpp  SignalKLayer.hpp
sdk/resources/schemas/: display.json  layer.json
sdk/scripts/: README.md  create-app.py  fairwindapp-create.py  fairwindsdk-app-create.py  gc1530.json
sdk/src/: App.cpp  AppBase.cpp  AppItem.cpp  FairWind.cpp  FairWindApp.cpp  FairWindAppBase.cpp  PageBase.cpp  PanelBase.cpp  SignalKDocument.cpp
sdk/src/connections/: ConnectionSignalKAPIClient.cpp  ConnectionSignalKWSClient.cpp  SignalKAPIClient.cpp  SignalKClient.cpp  SignalKWSClient.cpp
sdk/src/layers/: ESRILayer.cpp  FairWindOSMLayer.cpp  FairWindTiledLayer.cpp  GeoJsonLayer.cpp  ItemAton.cpp  ItemDefault.cpp  ItemShoreBasestations.cpp  ItemSignalK.cpp  ItemVessel.cpp  JsonTilesLayer.cpp  MvtTilesLayer.cpp  OSMLayer.cpp  SignalKLayer.cpp  TiffLayer.cpp  TiledLayer.cpp
sdk/src/layouts/: GridLayout.cpp  LayoutBase.cpp  Page4x4Layout.cpp  Page4x4Layout.ui  VHGLayout.cpp  VHGLayout.ui
sdk/src/settings/: DisplaysBrowser.cpp  FairCheckBox.cpp  FairComboBox.cpp  FairLineEdit.cpp  LayersBrowser.cpp
sdk/src/signalk/: Document.cpp  Note.cpp  Subscription.cpp  Waypoint.cpp
sdk/src/ui/: Colophon.cpp  Colophon.ui  Warning.cpp  Warning.ui  double.ui  single.ui
sdk/src/util/: ExtendedJsonSchema.cpp  Units.cpp
sdk/templates/app/: Appname.cpp  Appname.hpp  Appname.ui  CMakeLists.txt  MainPage.cpp  MainPage.hpp  MainPage.ui  (+8 more)
(+196 files in other folders)
