add_subdirectory(boating)
add_subdirectory(chandlery)
add_subdirectory(chart)
add_subdirectory(dashboard)
add_subdirectory(entertainment)
add_subdirectory(gc1530)
add_subdirectory(imsf)
add_subdirectory(native)
add_subdirectory(portolano)
add_subdirectory(radar)
add_subdirectory(sonar)
add_subdirectory(uav)
add_subdirectory(video)
add_subdirectory(weather)
add_subdirectory(web)