message("Adding Apps...")

MACRO(SUBDIRLIST result curdir)
    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
    SET(dirlist "")
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${curdir}/${child})
            LIST(APPEND dirlist ${child})
        ENDIF()
    ENDFOREACH()
    SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(subdir ${SUBDIRS})
    message("Adding ${subdir} subdirectory.")
    ADD_SUBDIRECTORY(${subdir})
ENDFOREACH()

#add_subdirectory("chandlery")
#add_subdirectory("chart")
#add_subdirectory("dashboard")
#add_subdirectory("entertainment")
#add_subdirectory("external")
#add_subdirectory("gc1530")
#add_subdirectory("imsf")
#add_subdirectory("web")
#add_subdirectory("portolano")
#add_subdirectory("radar")
#add_subdirectory("sonar")
#add_subdirectory("uav")
#add_subdirectory("video")
#add_subdirectory("weather")